--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,5 +3,7 @@
 {{#if locals.showTitle}}
   <h1>UXioms 4 Life</h1>
 {{/if}}
-
+<form action="">
+	<input type="text" placeholder="type me">
+</form>
 <img src="/img/UXtrum.gif" alt="UX Spectrum">
