--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Source+Sans+Pro:200,300,400,600,700,900,200i,300i,400i,600i,700i,900i/Montserrat:400,700/Linux+Libertine:400,600,700,400i,600i,700i">
   <title>{{locals.title}}</title>
 </head>
 <body>
