--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:500,800);
-
 :root {
   /* minerals */
   /* dye */
@@ -23,6 +21,7 @@ body {
   margin: 0;
   color: #0F0F0F;
   background: #E5E4E2;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 /* firefox fix */
@@ -47,7 +46,7 @@ h5,
 h6 {
   margin: .5em 0;
   font-weight: 300;
-  font-family: 'Alegreya Sans SC', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 /* big headers */
@@ -218,7 +217,7 @@ input[type=password] {
   padding: 0;
   line-height: 2em;
   font-size: 1.25em;
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: "Linux Libertine", serif;
   text-indent: .5em;
   color: #0F0F0F;
 }
@@ -469,7 +468,7 @@ h4 {
 blockquote {
   font-size: 1.25em;
   line-height: 1.25em;
-  font-family: "Georgia", serif;
+  font-family: "Linux Libertine", serif;
   margin: 0;
 }
 
